--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -8,7 +8,7 @@
         - if current_user&.admin?
           %li= link_to "Admin", admin_root_path
         - if current_user
-          %li= link_to "Sign Out", destroy_user_session_path, method: :delete
+          %li= link_to "Sign Out", user_session_path, method: :delete
         - else
           %li= link_to 'Sign In', new_user_session_path
         
