--- a/app/views/admin/users/index.haml
+++ b/app/views/admin/users/index.haml
@@ -15,6 +15,7 @@
           %th Email
           %th Access
           %th Account Status
+          %th Invitation Valid Until
           %th
 
       %tbody
@@ -24,7 +25,10 @@
             %td= user.email
             %td= user.admin? ? 'Admin' : 'Regular'
             %td= user.active? ? 'Active' : 'Pending Confirmation'
+            %td= user.activation_token_expires_at&.strftime("%-m/%-d/%Y")
             %td
+              - unless user.active?
+                = link_to 'Resend Invitation', resend_invitation_admin_user_path(user), class: 'btn btn-default btn-xs', method: :post
               = link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-default btn-xs'
               = link_to 'Delete', [:admin, user], :method => :delete, :data => { :confirm => "Are you sure you want to delete this account?" }, class: 'btn btn-danger btn-xs'
 
