--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -6,6 +6,8 @@
           .navbar-brand.wrapt-logo{class: ("active" if active_top_nav_section == 'home_pages')}= link_to "Wrapt", root_path
         
         %ul.nav.navbar-nav.navbar-right
+          - if current_user
+            %li= link_to "My Account", my_account_path
           - if current_user&.admin?
             %li= link_to "Admin", admin_root_path
           - if current_user
